<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_newsfeed"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_newsfeed" />

    <item
        android:id="@+id/navigation_categories"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_categories" />

    <item
        android:id="@+id/navigation_add_review"
        android:icon="@drawable/ic_add"
        android:title="@string/title_add_review" />

    <item
        android:id="@+id/navigation_your_lists"
        android:icon="@drawable/ic_lists"
        android:title="@string/title_lists" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/title_profile" />

</menu>