<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/loginFragment">

    <navigation android:id="@+id/app_navigation"
        app:startDestination="@id/navigation_newsfeed">
        <fragment
            android:id="@+id/navigation_add_review"
            android:name="edu.neu.madcourse.recoio.ui.addreview.AddReviewFragment"
            android:label="@string/title_add_review"
            tools:layout="@layout/fragment_add_review" />
        <fragment
            android:id="@+id/navigation_your_lists"
            android:name="edu.neu.madcourse.recoio.ui.yourlists.YourListsFragment"
            android:label="@string/title_lists"
            tools:layout="@layout/fragment_your_lists" >
            <action
                android:id="@+id/action_navigation_your_lists_to_addListFragment"
                app:destination="@id/addListFragment" />
            <action
                android:id="@+id/action_navigation_your_lists_to_listFragment"
                app:destination="@id/listFragment" />
        </fragment>
        <fragment
            android:id="@+id/navigation_newsfeed"
            android:name="edu.neu.madcourse.recoio.ui.newsfeed.NewsfeedFragment"
            android:label="@string/title_newsfeed"
            tools:layout="@layout/fragment_newsfeed" >
            <action
                android:id="@+id/action_navigation_newsfeed_to_reviewFragment"
                app:destination="@id/reviewFragment" />
        </fragment>
        <fragment
            android:id="@+id/navigation_categories"
            android:name="edu.neu.madcourse.recoio.ui.categories.CategoriesFragment"
            android:label="@string/title_categories"
            tools:layout="@layout/fragment_categories" >
            <action
                android:id="@+id/action_navigation_categories_to_categoryFragment"
                app:destination="@id/categoryFragment" />
            <action
                android:id="@+id/action_navigation_categories_to_searchFragment"
                app:destination="@id/searchFragment" />
        </fragment>
        <fragment
            android:id="@+id/navigation_profile"
            android:name="edu.neu.madcourse.recoio.ui.profile.ProfileFragment"
            android:label="Your Profile"
            tools:layout="@layout/fragment_profile">
            <action
                android:id="@+id/action_navigation_profile_to_reviewFragment"
                app:destination="@id/reviewFragment" />
        </fragment>
        <action
            android:id="@+id/action_global_loginFragment"
            app:destination="@id/loginFragment" />
        <fragment
            android:id="@+id/reviewFragment"
            android:name="edu.neu.madcourse.recoio.ui.review.ReviewFragment"
            android:label="Review"
            tools:layout="@layout/review_fragment">
            <action
                android:id="@+id/action_reviewFragment_to_navigation_newsfeed"
                app:destination="@id/navigation_newsfeed" />
            <action
                android:id="@+id/action_reviewFragment_to_categoryFragment"
                app:destination="@id/categoryFragment" />
            <action
                android:id="@+id/action_reviewFragment_to_navigation_profile"
                app:destination="@id/navigation_profile" />
            <action
                android:id="@+id/action_reviewFragment_to_otherProfileFragment"
                app:destination="@id/otherProfileFragment" />
        </fragment>
        <fragment
            android:id="@+id/categoryFragment"
            android:name="edu.neu.madcourse.recoio.ui.categories.CategoryFragment"
            android:label="Category"
            tools:layout="@layout/fragment_category">
            <action
                android:id="@+id/action_categoryFragment_to_reviewFragment"
                app:destination="@id/reviewFragment" />
            <action
                android:id="@+id/action_categoryFragment_to_navigation_categories"
                app:destination="@id/navigation_categories" />
        </fragment>
        <fragment
            android:id="@+id/addListFragment"
            android:name="edu.neu.madcourse.recoio.ui.yourlists.AddListFragment"
            android:label="Create a List"
            tools:layout="@layout/fragment_add_list">
            <action
                android:id="@+id/action_addListFragment_to_navigation_your_lists"
                app:destination="@id/navigation_your_lists" />
        </fragment>
        <fragment
            android:id="@+id/listFragment"
            android:name="edu.neu.madcourse.recoio.ui.yourlists.ListFragment"
            android:label="fragment_list"
            tools:layout="@layout/fragment_list" >
            <action
                android:id="@+id/action_listFragment_to_navigation_your_lists"
                app:destination="@id/navigation_your_lists" />
        </fragment>
        <fragment
            android:id="@+id/searchFragment"
            android:name="edu.neu.madcourse.recoio.ui.categories.search.SearchFragment"
            android:label="Search results"
            tools:layout="@layout/fragment_search">
            <action
                android:id="@+id/action_searchFragment_to_navigation_categories"
                app:destination="@id/navigation_categories" />
        </fragment>
        <fragment
            android:id="@+id/otherProfileFragment"
            android:name="edu.neu.madcourse.recoio.ui.otherprofile.OtherProfileFragment"
            android:label="Reco"
            tools:layout="@layout/fragment_other_profile" />
    </navigation>
    <fragment
        android:id="@+id/loginFragment"
        android:name="edu.neu.madcourse.recoio.ui.login.LoginFragment"
        android:label="Reco.io"
        tools:layout="@layout/login_fragment">
        <action
            android:id="@+id/action_loginFragment_to_app_navigation"
            app:destination="@id/app_navigation" />
        <action
            android:id="@+id/action_loginFragment_to_signUpFragment"
            app:destination="@id/signUpFragment" />
    </fragment>
    <fragment
        android:id="@+id/signUpFragment"
        android:name="edu.neu.madcourse.recoio.ui.signup.SignUpFragment"
        android:label="Reco.io"
        tools:layout="@layout/sign_up_fragment">
        <action
            android:id="@+id/action_signUpFragment_to_app_navigation"
            app:destination="@id/app_navigation" />
    </fragment>
</navigation>